feat: create a customer theme

--- a/src/_public-api.scss
+++ b/src/_public-api.scss
@@ -7,6 +7,7 @@
 @forward "./theming/definition";
 @forward "./theming/inspection";
 @forward "./themes/ogs";
+@forward "./themes/customer";
 @forward "./palettes/blue";
 @forward "./palettes/gray";
 @forward "./palettes/green";
@@ -16,8 +17,3 @@
 @forward "./palettes/petrol";
 @forward "./palettes/red";
 @forward "./palettes/yellow";
-
-@forward "./themes/ogs";
-
-@forward "./theming/inspection";
-@forward "./theming/definition";
