chore: use the red palette from ogs

--- a/src/themes/_ogs.scss
+++ b/src/themes/_ogs.scss
@@ -18,7 +18,7 @@
       secondary: $orange-palette,
       neutral: $gray-palette,
       neutral-variant: $light-gray-palette,
-      error: mat.$red-palette
+      error: $red-palette
     )
   );
 };
